<resources>
    <string name="app_name">#ЧТОПОСМОТРЕТЬ?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">О нас</string>

    <string name="menu_movies">Фильмы</string>
    <string name="menu_serials">Сериалы</string>
    <string name="menu_anime">Аниме</string>
    <string name="menu_cart">Мультфильмы</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_want">Хочу посмотреть</string>
    <string name="menu_done">Просмотрено</string>
    <string name="menu_shop">Магазин</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Account</string>
    <string name="menu_ac">Account</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-9595963256137742/5936194448</string>
    <string name="empty">Список пуст</string>

    <string name="banner_ad_unit_id">ca-app-pub-9595963256137742/2254323512</string>
    <string name="banner_ad_unit_id1">ca-app-pub-9595963256137742/9940176185</string>

    <string name="impossible_game">Получи монеты за рекламу</string>
    <string name="retry_button_text">Подождать ещё</string>
    <string name="watch_video_button_text">Посмотерь видео за 100 монет</string>
    <string name="default_coin_text">0</string>
    <string name="buy_toast">Buy Toast</string>
    <string name="hello_world">Hello World!</string>

    <string name="Title">Название фильма</string>
    <string name="Title1">Название: </string>
    <string name="Year">Год выпуска: </string>
    <string name="Country">Страна: </string>
    <string name="Genres">Жанр: </string>
    <string name="Duration">Длительность: </string>
    <string name="RatingDev">Рейтинг разработчиков: </string>
    <string name="RatingKinoPoisk">Рейтинг Кинопоиск: </string>
    <string name="Producer">Режиссер: </string>
    <string name="Cast">В ролях: </string>
    <string name="Discription">Описание: \n</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="aboutPerson">
        Для вас старались:
        \n Kostya Valetenok: Team Leam, QA, Desiner, Developer
        \n Alexey Kondratenko: Developer
        \n Daniil Halavenka: Developer
    </string>
    <string name="text1">Мы подобрали для вас с душой лучшее из того, что смотрели сами, для того чтоб
        вы смогли сэкономить своё время и могли насладиться лучшим из того что мы знаем. Всё, что здесь
        находится, является лучшим по нашему мнению, и оно может отличатся от вашего.
        \nЕсли здесь отсутвует ваш любимый фильм, возможно мы о нём не знаем, поэтому присылайте нам на
        потчу то, что считаете лучшим. Лучшею подборку(По нашему мнению) мы опубликуем от вашего имени.
        \n Оставайтесь с нами. Хорошего времени суток, ваш R.A.project
    </string>
    <string name="res">Ресурсы,поделившиеся с нами инофрмацией:
        \n https://www.kinopoisk.ru/
        \n https://www.imdb.com/
    </string>
<<<<<<< HEAD

    <!-- Жанры -->
    <string name="genre00">Биография</string>
    <string name="genre01">Боевик</string>
    <string name="genre02">Вестерн</string>
    <string name="genre03">Военный</string>
    <string name="genre04">Детектив</string>
    <string name="genre05">Документальный</string>
    <string name="genre06">Драма</string>
    <string name="genre07">Исторический</string>
    <string name="genre08">Комедия</string>
    <string name="genre09">Криминал</string>
    <string name="genre10">Мелодрамма</string>
    <string name="genre11">Мюзикл</string>
    <string name="genre12">Приключение</string>
    <string name="genre13">Семейный</string>
    <string name="genre14">Спорт</string>
    <string name="genre15">Триллер</string>
    <string name="genre16">Хоррор</string>
    <string name="genre17">Фантастика</string>
    <string name="genre18">Фентези</string>
    <!-- Массив^^^ -->
    <string-array name="genres_array" translatable="false">
        <item>@string/genre00</item>
        <item>@string/genre01</item>
        <item>@string/genre02</item>
        <item>@string/genre03</item>
        <item>@string/genre04</item>
        <item>@string/genre05</item>
        <item>@string/genre06</item>
        <item>@string/genre07</item>
        <item>@string/genre08</item>
        <item>@string/genre09</item>
        <item>@string/genre10</item>
        <item>@string/genre11</item>
        <item>@string/genre12</item>
        <item>@string/genre13</item>
        <item>@string/genre14</item>
        <item>@string/genre15</item>
        <item>@string/genre16</item>
        <item>@string/genre17</item>
        <item>@string/genre18</item>
    </string-array>
    <!-- Колонки MainTable -->
    <string name="c00">Key</string>
    <string name="c01">Image</string>
    <string name="c02">Title</string>
    <string name="c03">Year</string>
    <string name="c04">Country</string>
    <string name="c05">Duration</string>
    <string name="c06">Rating1</string>
    <string name="c07">Rating2</string>
    <string name="c08">Director</string>
    <string name="c09">Cast</string>
    <string name="c10">Descript</string>
    <!-- Массив^^^ -->
    <string-array name="main_table_columns" translatable="false">
        <item>@string/c00</item>
        <item>@string/c01</item>
        <item>@string/c02</item>
        <item>@string/c03</item>
        <item>@string/c04</item>
        <item>@string/c05</item>
        <item>@string/c06</item>
        <item>@string/c07</item>
        <item>@string/c08</item>
        <item>@string/c09</item>
        <item>@string/c10</item>
    </string-array>

=======
    <string name="Buy">Купить</string>
>>>>>>> MasterIntegr
</resources>